syntax = "proto2";

option go_package = "github.com/Rione/ssl-RACOON-Pi2/proto/pb_gen";

message Robots_Status{
  repeated Robot_Status robots_status = 1;
}

message Robot_Status {
  required uint32 robot_id  = 1;
  required bool infrared   = 2;
  required uint32 battery_voltage  = 3;
  required uint32 cap_power  = 4;
}
